# battleship

./: CMakeLists.txt  Computer.cpp  GameTypes.h  Ship.cpp  Ship.h  aitest.cpp  battleship_ai.py  board.h  main.cpp  main.h  oldMain.cpp
